--- a/flaskWebServer/templates/home.html
+++ b/flaskWebServer/templates/home.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
+{% for title in GetRuliWebPS4(page)%}
   <div class="jumbo">
-    <h2>Welcome to the Flask app<h2>
-    <h3>This is the home page for the Flask app<h3>
+    <h3>{{title.text}}<h3>
+    <h4>{{title.href}}</h4>
   </div>
 {% endblock %}
